[package]
name = "EMDisi_lib"
version = "0.1.7"
edition = "2021"
authors = ["ElectroMutex"]
description = "This project is part of the EMNetChain"
license = "MIT"
documentation = "https://github.com/SkillfulElectro/EMDisi.git"
homepage = "https://github.com/SkillfulElectro/EMDisi.git"
repository = "https://github.com/SkillfulElectro/EMDisi.git"
readme = "README.md"

[dependencies]
json_parser_simple = "0.1.2"